--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,13 @@
     "require": {
         "php": ">=5.3.2"
     },
+    "suggest": {
+        "kzykhys/pygments": "Used for pygments tag"
+    },
     "require-dev": {
         "twig/twig": ">=1.10",
-        "symfony/finder": ">=2.3"
+        "symfony/finder": ">=2.3",
+        "kzykhys/pygments": ">=1.0"
     },
     "autoload": {
         "psr-0": {
