--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "kzykhys/twig-extensions",
     "description": "Extensions for Twig",
+    "keywords": ["twig", "extension", "template"],
     "license": "MIT",
     "authors": [
         {
@@ -13,12 +14,14 @@
         "php": ">=5.3.2"
     },
     "suggest": {
-        "kzykhys/pygments": "Used for pygments tag"
+        "kzykhys/ciconia": "Provides Github Flavored Markdown parser",
+        "kzykhys/pygments": "Provides syntax highlighter"
     },
     "require-dev": {
         "twig/twig": ">=1.10",
         "symfony/finder": ">=2.3",
-        "kzykhys/pygments": ">=1.0"
+        "kzykhys/pygments": ">=1.0",
+        "kzykhys/ciconia": ">=1.0"
     },
     "autoload": {
         "psr-0": {
