--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,15 @@
     },
     "suggest": {
         "kzykhys/ciconia": "Provides Github Flavored Markdown parser",
-        "kzykhys/pygments": "Provides syntax highlighter"
+        "kzykhys/pygments": "Provides syntax highlighter",
+        "leafo/lessphp": "Provides LESS compiler"
     },
     "require-dev": {
         "twig/twig": ">=1.10",
         "symfony/finder": ">=2.3",
         "kzykhys/pygments": ">=1.0",
-        "kzykhys/ciconia": ">=1.0"
+        "kzykhys/ciconia": ">=1.0",
+        "leafo/lessphp": ">=0.4"
     },
     "autoload": {
         "psr-0": {
