--- a/composer.json
+++ b/composer.json
@@ -31,5 +31,10 @@
         "psr-0": {
             "": "src"
         }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     }
 }
