--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ php:
   - 5.4
   - 5.3
 
+before_install:
+  - sudo easy_install Pygments
+
 before_script:
   - composer require --no-update satooshi/php-coveralls:dev-master sensiolabs/security-checker:dev-master
   - composer update --dev --no-interaction
